debug
rm: cannot remove 'a.out': No such file or directory
rm: cannot remove 'a.s': No such file or directory
Error: Unknown variable name
Basic Block in function 'main' does not have terminator!
label %entry
Basic Block in function 'is_it' does not have terminator!
label %entry
The faulty IR is:
------------------------------------------------

llc: a.ll:32:1: error: expected instruction opcode
}
^
clang: error: no such file or directory: 'a.s'
opt: a.ll:32:1: error: expected instruction opcode
}
^
do.sh: 13: do.sh: ./a.out: not found
